[project]
name = "test-python-package"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "u-na-gi", email = "orcinusorca1758dv6932@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/test_python_package"]
