[project]
name = "test-python-package"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "u-na-gi", email = "orcinusorca1758dv6932@gmail.com" }
]
dependencies = [
    "requests==2.31.0",
    "attrs==23.1.0",
    "build==0.10.0",
    "CacheControl==0.13.1",
    "certifi==2023.7.22",
    "cffi==1.16.0",
    "charset-normalizer==3.3.1",
    "cleo==2.0.1",
    "crashtest==0.4.1",
    "distlib==0.3.7",
    "dulwich==0.21.6",
    "filelock==3.12.4",
    "gitdb==4.0.11",
    "GitPython==3.1.42",
    "idna==3.4",
    "importlib-metadata==6.8.0",
    "installer==0.7.0",
    "jaraco.classes==3.3.0",
    "jsonschema==4.17.3",
    "keyring==24.2.0",
    "more-itertools==10.1.0",
    "msgpack==1.0.7",
    "packaging==23.2",
    "pexpect==4.8.0",
    "pkginfo==1.9.6",
    "platformdirs==3.11.0",
    "poetry==1.6.1",
    "poetry-core==1.7.0",
    "poetry-plugin-export==1.5.0",
    "ptyprocess==0.7.0",
    "pycparser==2.21",
    "pyproject_hooks==1.0.0",
    "pyrsistent==0.19.3",
    "rapidfuzz==2.15.2",
    "requests-toolbelt==1.0.0",
    "shellingham==1.5.3",
    "smmap==5.0.1",
    "tomli==2.0.1",
    "tomlkit==0.12.1",
    "trove-classifiers==2023.10.18",
    "urllib3==2.0.7",
    "virtualenv==20.24.5",
    "xattr==0.10.1",
    "zipp==3.17.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/test_python_package"]
