[project]
name = "import-sample"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "u-na-gi", email = "orcinusorca1758dv6932@gmail.com" }
]
dependencies = [
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "idna==3.6",
    "requests==2.31.0",
    "test-python-package @ file:///Users/yuunag1/workspace/test-python-package/dist/test_python_package-0.1.0-py3-none-any.whl#sha256=4eecada96208736e25cd2b8d3ec0321ca11813c5a0b12b32d5005edfbd1c51b2",
    "urllib3==2.2.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/import_sample"]
